--- a/composer.json
+++ b/composer.json
@@ -18,17 +18,14 @@
         "php": "^8.3",
         "composer/installers": "^2.2",
         "drupal/admin_toolbar": "^3.4",
-        "drupal/core-composer-scaffold": "^10",
-        "drupal/core-recommended": "^10",
+        "drupal/core-composer-scaffold": "^11",
+        "drupal/core-project-message": "^11",
+        "drupal/core-recommended": "^11",
         "drupal/gin": "^3.0@RC",
         "drupal/gin_login": "^2.1",
-        "drupal/openapi": "^2.1",
-        "drupal/openapi_jsonapi": "^3.0",
-        "drupal/openapi_rest": "^2.0@RC",
-        "drupal/openapi_ui": "^1.0@RC",
-        "drupal/openapi_ui_swagger": "^1.0",
         "drupal/restui": "^1.21",
-        "drush/drush": "^12.5",
+        "drupal/upgrade_status": "^4.3",
+        "drush/drush": "^13",
         "mnsami/composer-custom-directory-installer": "^2.0",
         "vlucas/phpdotenv": "^5.6"
     },
@@ -49,7 +46,8 @@
             "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "php-http/discovery": true,
-            "mnsami/composer-custom-directory-installer": true
+            "mnsami/composer-custom-directory-installer": true,
+            "drupal/core-project-message": true
         },
         "sort-packages": true
     },
@@ -93,6 +91,7 @@
     "require-dev": {
         "deployer/deployer": "^7.4",
         "drupal/coder": "^8.3",
+        "drupal/core-dev": "^11",
         "phpstan/phpstan": "^1.11"
     },
     "scripts": {
